--- a/cube.html
+++ b/cube.html
@@ -44,7 +44,7 @@
                 console.log("Acceleration along the X-axis " + acl.x);
                 console.log("Acceleration along the Y-axis " + acl.y);
                 console.log("Acceleration along the Z-axis " + acl.z);
-                cube.rotation.x += acl.x
+                cube.rotation.x += acl.x / 100
             });
 
             acl.start();
