--- a/cube.html
+++ b/cube.html
@@ -44,7 +44,7 @@
                 console.log("Acceleration along the X-axis " + acl.x);
                 console.log("Acceleration along the Y-axis " + acl.y);
                 console.log("Acceleration along the Z-axis " + acl.z);
-                cube.rotation.y += acl.y / 1000
+                cube.rotation.y += acl.z / 1000
             });
 
             acl.start();
